# HyperSearch

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.csv  throughput_results.csv
apps/: benchmark_distance.cpp  benchmark_sift.cpp  demo.cpp
include/ann/: benchmark.hpp  benchmark_report.hpp  brute_force_index.hpp  dataset.hpp  distance.hpp  evaluation.hpp  hnsw_index.hpp  index.hpp  ivf_index.hpp  ivf_pq_index.hpp  ivf_sq_index.hpp  kmeans.hpp  parallel_benchmark.hpp  pq_brute_force_index.hpp  product_quantizer.hpp  scalar_quantizer.hpp  sq_brute_force_index.hpp  timer.hpp  topk.hpp
scripts/: plot_results.py
src/: benchmark.cpp  benchmark_report.cpp  brute_force_index.cpp  dataset.cpp  distance.cpp  evaluation.cpp  hnsw_index.cpp  ivf_index.cpp  ivf_pq_index.cpp  ivf_sq_index.cpp  kmeans.cpp  parallel_benchmark.cpp  pq_brute_force_index.cpp  product_quantizer.cpp  scalar_quantizer.cpp  sq_brute_force_index.cpp
